Remove unused code

--- a/snappy/src/main/res/values/themes.xml
+++ b/snappy/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <style name="SnappyActivity" parent="Theme.AppCompat.Light.NoActionBar">
+  <style name="SnappyActivity" parent="Theme.MaterialComponents.Light.NoActionBar">
     <item name="android:immersive">true</item>
     <item name="android:windowFullscreen">true</item>
     <item name="android:windowTranslucentStatus">true</item>
